# Steiner

./: .gitignore  CMakeLists.txt  constructive_md.cpp  elite_simples.cpp  elite_simples.h  popstar.cpp
Extra/: constructive_md.cpp  constructive_md.h  elite_simples.h
Luftschlange-ms-steiner-puw-324769b/: Elite - Descriptor.txt  Elite - Vertices.txt  Elite - maxit 100.txt  Elite.txt  EliteArestas.txt  EliteVertices.txt  Makefile  ResultadosLP.xlsx  analyze.py  analyze_lp.py  construct_solutions.py  padroesA.txt  padroesA6.txt  padroesA8.txt  padroesA9.txt  padroesV.txt  padroesV10.txt  padroesV6.txt  padroesV7.txt  padroesV8.txt  padroesV9.txt  run.cpp  run_group.py  run_instance.cpp  running.txt  solutions_pool.json
Luftschlange-ms-steiner-puw-324769b/FPmax/: fim_all  fim_closed  fim_maximal  fp_tree.h  fpmax.cpp  fpmax_hnmp  fpmax_hnmp.cpp  makefile
Luftschlange-ms-steiner-puw-324769b/instances/B/: b01.stp  b02.stp  b05.stp  b06.stp  b07.stp  b08.stp  b09.stp  b10.stp  b11.stp  b12.stp  b13.stp  b14.stp  b15.stp  b16.stp  b17.stp  b18.stp
Luftschlange-ms-steiner-puw-324769b/instances/I_simple_preprocessed/: I001.stp  I002.stp  I003.stp  I004.stp  I005.stp  I006.stp  I007.stp  I008.stp  I009.stp  I010.stp  I011.stp  I012.stp  I013.stp  I014.stp  I015.stp  I016.stp  I017.stp  I018.stp  I019.stp  I020.stp  I021.stp  I022.stp  I023.stp  I024.stp  I025.stp  I026.stp  I027.stp  I028.stp  I029.stp  I030.stp  I031.stp  I032.stp  I033.stp  I034.stp  I035.stp  I036.stp  I037.stp  I038.stp  I039.stp  I040.stp  (+45 more)
Luftschlange-ms-steiner-puw-324769b/instances/geo_original/: G101.stp  G105.stp  G107.stp  G201.stp  G202.stp  G204.stp  G206.stp  G207.stp  G301.stp  G304.stp  G308.stp
Luftschlange-ms-steiner-puw-324769b/instances/luidi/B/: opt.json
Luftschlange-ms-steiner-puw-324769b/instances/luidi/C/: opt.json
Luftschlange-ms-steiner-puw-324769b/instances/luidi/I080/: opt.json
Luftschlange-ms-steiner-puw-324769b/instances/luidi/I160/: opt.json
Luftschlange-ms-steiner-puw-324769b/instances/luidi/I320/: opt.json
Luftschlange-ms-steiner-puw-324769b/instances/luidi/MC/: opt.json
Luftschlange-ms-steiner-puw-324769b/instances/luidi/P4E/: opt.json
Luftschlange-ms-steiner-puw-324769b/instances/luidi/P4Z/: opt.json
Luftschlange-ms-steiner-puw-324769b/instances/luidi/P6E/: opt.json
Luftschlange-ms-steiner-puw-324769b/instances/luidi/P6Z/: opt.json
Luftschlange-ms-steiner-puw-324769b/instances/luidi/X/: opt.json
Luftschlange-ms-steiner-puw-324769b/instances/open/I640/: i640-311.stp  i640-312.stp  i640-313.stp  i640-314.stp  i640-315.stp  opt.json
Luftschlange-ms-steiner-puw-324769b/instances/open/PUC/: bip52p.stp  bip62p.stp  bipa2p.stp  cc10-2p.stp  cc10-2u.stp  cc11-2p.stp  cc11-2u.stp  cc12-2p.stp  cc12-2u.stp  cc3-10p.stp  cc3-10u.stp  cc3-11p.stp  cc3-11u.stp  cc3-12p.stp  cc3-12u.stp  cc7-3p.stp  cc7-3u.stp  cc9-2p.stp  hc10p.stp  hc11p.stp  (+3 more)
Luftschlange-ms-steiner-puw-324769b/output/: padroesArestas.txt
Luftschlange-ms-steiner-puw-324769b/saved/1537745622/: deviation.json  elite.json  results.json
Luftschlange-ms-steiner-puw-324769b/saved/1538011372/: deviation.json  elite.json  results.json
Luftschlange-ms-steiner-puw-324769b/saved/1538446219/: deviation.json  elite.json  results.json
Luftschlange-ms-steiner-puw-324769b/saved/1539080288/: deviation.json  elite.json  results.json
Luftschlange-ms-steiner-puw-324769b/saved/1555191343/: analyze.json  deviation.json  elite.json  results.json
Luftschlange-ms-steiner-puw-324769b/src/: BranchBound.h  LSBasics.h  LSKeyPath.h  LSVertexElimination.h  LSVertexInsertion.h  binheap.h  buckets.h  constructive.h  drawer.h  dual.h  elite.h  execution_log.h  graph.h  labels.h  pairheap.h  perturbation.h  preprocess.h  rfw_random.cpp  rfw_random.h  rfw_stack.h  rfw_timer.cpp  rfw_timer.h  simplequeue.h  solution.h  spgconfig.h  spgsolver.h  stedgelinear.h  steiner.cpp  targetver.h  uf.h  uset.h  voronoi.h
cdigofonteefpmax/: padroes.txt
cdigofonteefpmax/FPmax/: fim_closed  fp_tree.cpp
fpmax/: Mineracao.cpp  bd.txt  padroes.txt
fpmax/FPmax/: fim_all  fim_maximal  fp_tree.cpp  fpmax.cpp  fpmax_hnmp  fpmax_hnmp.cpp  fsout.cpp
(+3 files in other folders)
