cmake_minimum_required(VERSION 3.10)
project(Steiner)

set(CMAKE_CXX_STANDARD 11)

include_directories(.)
include_directories(cdigofonteefpmax/FPmax)
include_directories(Luftschlange-ms-steiner-puw-324769b/src)

add_executable(Steiner
        cdigofonteefpmax/FPmax/bibrand.c
        cdigofonteefpmax/FPmax/bibrand.h
        cdigofonteefpmax/FPmax/buffer.cpp
        cdigofonteefpmax/FPmax/buffer.h
        cdigofonteefpmax/FPmax/buffer.o
        cdigofonteefpmax/FPmax/common.h
        cdigofonteefpmax/FPmax/data.cpp
        cdigofonteefpmax/FPmax/data.h
        cdigofonteefpmax/FPmax/data.o
        cdigofonteefpmax/FPmax/fim_all
        cdigofonteefpmax/FPmax/fim_closed
        cdigofonteefpmax/FPmax/fim_maximal
        cdigofonteefpmax/FPmax/fp_node.cpp
        cdigofonteefpmax/FPmax/fp_node.h
        cdigofonteefpmax/FPmax/fp_node.o
        cdigofonteefpmax/FPmax/fp_tree.cpp
        cdigofonteefpmax/FPmax/fp_tree.h
        cdigofonteefpmax/FPmax/fp_tree.o
        cdigofonteefpmax/FPmax/fpclosed.o
        cdigofonteefpmax/FPmax/fpgrowth.o
        cdigofonteefpmax/FPmax/fpmax.cpp
        cdigofonteefpmax/FPmax/fpmax.o
        cdigofonteefpmax/FPmax/fpmax_hnmp
        cdigofonteefpmax/FPmax/fpmax_hnmp.cpp
        cdigofonteefpmax/FPmax/fpmax_hnmp.o
        cdigofonteefpmax/FPmax/fsout.cpp
        cdigofonteefpmax/FPmax/fsout.h
        cdigofonteefpmax/FPmax/fsout.o
        cdigofonteefpmax/FPmax/makefile
        cdigofonteefpmax/bd.txt
        cdigofonteefpmax/Mineracao.cpp
        cdigofonteefpmax/padroes.txt
        Luftschlange-ms-steiner-puw-324769b/bin/steiner
        Luftschlange-ms-steiner-puw-324769b/src/binheap.h
        Luftschlange-ms-steiner-puw-324769b/src/BranchBound.h
        Luftschlange-ms-steiner-puw-324769b/src/buckets.h
        Luftschlange-ms-steiner-puw-324769b/src/constructive.h
        Luftschlange-ms-steiner-puw-324769b/src/drawer.h
        Luftschlange-ms-steiner-puw-324769b/src/dual.h
        Luftschlange-ms-steiner-puw-324769b/src/elite.h
        Luftschlange-ms-steiner-puw-324769b/src/execution_log.h
        Luftschlange-ms-steiner-puw-324769b/src/graph.h
        Luftschlange-ms-steiner-puw-324769b/src/labels.h
        Luftschlange-ms-steiner-puw-324769b/src/LSBasics.h
        Luftschlange-ms-steiner-puw-324769b/src/LSKeyPath.h
        Luftschlange-ms-steiner-puw-324769b/src/LSVertexElimination.h
        Luftschlange-ms-steiner-puw-324769b/src/LSVertexInsertion.h
        Luftschlange-ms-steiner-puw-324769b/src/pairheap.h
        Luftschlange-ms-steiner-puw-324769b/src/perturbation.h
        Luftschlange-ms-steiner-puw-324769b/src/preprocess.h
        Luftschlange-ms-steiner-puw-324769b/src/rfw_random.cpp
        Luftschlange-ms-steiner-puw-324769b/src/rfw_random.h
        Luftschlange-ms-steiner-puw-324769b/src/rfw_stack.h
        Luftschlange-ms-steiner-puw-324769b/src/rfw_timer.cpp
        Luftschlange-ms-steiner-puw-324769b/src/rfw_timer.h
        Luftschlange-ms-steiner-puw-324769b/src/simplequeue.h
        Luftschlange-ms-steiner-puw-324769b/src/solution.h
        Luftschlange-ms-steiner-puw-324769b/src/spgconfig.h
        Luftschlange-ms-steiner-puw-324769b/src/spgsolver.h
        Luftschlange-ms-steiner-puw-324769b/src/stedgelinear.h
        Luftschlange-ms-steiner-puw-324769b/src/steiner.cpp
        Luftschlange-ms-steiner-puw-324769b/src/targetver.h
        Luftschlange-ms-steiner-puw-324769b/src/uf.h
        Luftschlange-ms-steiner-puw-324769b/src/uset.h
        Luftschlange-ms-steiner-puw-324769b/src/voronoi.h
        "Luftschlange-ms-steiner-puw-324769b/Elite - Descriptor.txt"
        "Luftschlange-ms-steiner-puw-324769b/Elite - maxit 100.txt"
        Luftschlange-ms-steiner-puw-324769b/Elite.txt
        Luftschlange-ms-steiner-puw-324769b/LICENSE.txt
        Luftschlange-ms-steiner-puw-324769b/Makefile
        Luftschlange-ms-steiner-puw-324769b/README.md
        Luftschlange-ms-steiner-puw-324769b/running.txt
        constructive_md.cpp
        constructive_md.h
        elite_simples.cpp
        elite_simples.h
        popstar.cpp)
